Fix: Ultimate CORS resolution and fast deployment